--- a/src/App.css
+++ b/src/App.css
@@ -1245,7 +1245,7 @@ a .icon-title:hover{
   width: 100%;
 }
 
-#workshops{
+#workshopBook{
   width: 100%;
 }
 
@@ -2123,4 +2123,15 @@ a.event-subtitle{
   .resources-section{
     width: 75%;
   }
+}
+
+.flex{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.flexend{
+  margin-left: auto;
+  margin-right: 10%;
 }
