--- a/src/App.css
+++ b/src/App.css
@@ -942,21 +942,17 @@ label {
   }
 
 #graphBotLeft{
-    position: absolute;
-    height: 30%;
-    top: 100%;
-    left: -20%;
-    transform: translate(20%,-100%);
-    z-index: 2;
+  position: absolute;
+  height: 40%;
+  width: auto;
+  top: 90%;
+  left: 20%;
+  transform: translate(-90%,-100%);
+  z-index: 0;
 }
 
 #graphBotRight{
-    position: absolute;
-    height: 35%;
-    top: 95%;
-    left: 115%;
-    transform: translate(-115%,-90%);
-    z-index: 2;
+  display: none;
 }
 
 #graphTopRight{
@@ -968,14 +964,25 @@ label {
     z-index: 2;
 }
 
+#graphPlane{
+  height: 26%;
+  top: 80%;
+  width: auto;
+}
+
+#graphShapes{
+  height: auto;
+  width: 100%;
+}
+
 
 #book{
     position: absolute;
     width: unset;
-    height: 60%;
+    height: 55%;
     top: 100%;
-    left: 100%;
-    transform: translate(-100%,-100%);
+    left: -20%;
+    transform: translate(0%,-100%);
     z-index: -1;
 }
 
@@ -1003,7 +1010,7 @@ label {
     position: absolute;
     width: unset;
     height: 45%;
-    top: 100%;
+    top: 90%;
     left: 0%;
     transform: translate(0%,-100%);
     z-index: -1;
@@ -1022,30 +1029,32 @@ label {
 
 #popupTop{
     position: absolute;
-    width: 21%;
-    top: 57%;
-    left: 28%;
-    transform: translate(-28%,-57%);
+    height: 8%;
+    width: auto;
+    top: 50%;
+    left: 54%;
+    transform: translate(-54%,-50%);
     z-index: 2;
 }
 
 
 #popupBottom{
     position: absolute;
-    width: 25%;
+    height: 10%;
+    width: auto;
     top: 77%;
-    left: 45%;
-    transform: translate(-45%,-77%);
+    left: 77%;
+    transform: translate(-77%,-77%);
     z-index: 2;
 }
 
 #phonePlane{
     position: absolute;
     width: unset;
-    height: 20%;
-    top: 70%;
-    left: 0%;
-    transform: translate(-0%,-70%);
+    height: 26%;
+    top: 44%;
+    left: -11%;
+    transform: translate(11%,-44%);
     z-index: 2;
 }
 
@@ -1065,8 +1074,8 @@ label {
   }
 
   .rightTextContainer{
-    transform: translate(0, -250%) !important;
-    left: 8%;
+    transform: translate(0, -175%) !important;
+    left: 12%;
     max-width: 90%;
   }
 
