--- a/src/designathon.css
+++ b/src/designathon.css
@@ -207,7 +207,7 @@
     background-color: white;
     padding-top: 56px;
     padding-bottom: 72px;
-    height: 100vh;
+    min-height: 100vh;
   }
   .designathon .section-5 {
     padding-top: 56px;
